--- a/daily/8/DeepLearning/myproject/VOT/how_vot_dataset_looklike.ipynb
+++ b/daily/8/DeepLearning/myproject/VOT/how_vot_dataset_looklike.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -99,11 +99,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.image.AxesImage at 0x7ff75d5b27f0>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAP4AAAD8CAYAAABXXhlaAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDMuMC4zLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvnQurowAAC0NJREFUeJzt3FGonoV9x/Hvb0lTp92apIOQJnam\nKBYptJYwFHsh2jLnSvVCOksHaXHkZqO2G7Rxu+rdhFLrxSgEXZExql0qS8hFxaUp7CozqWXTxNSs\nrpqQVIfajl6MBv+7eJ+wo6S+b85533Pe1//3A4dznuc85zx/Hs73fZ73Oe85qSok9fJbaz2ApNVn\n+FJDhi81ZPhSQ4YvNWT4UkOGLzW0ovCT3JbkZJJTSfZMayhJs5XlvoAnyTrgJ8AngdPAU8Bnq+r4\n9MaTNAvrV/C1fwCcqqqfAiR5FLgD+I3hJ/FlgtKMVVXGbbOSS/1twEtLlk8P694kye4kR5McXcG+\nJE3RSs74E6mqvcBe8IwvzYuVnPHPAFcuWd4+rJM051YS/lPANUl2JNkA3A0cmM5YkmZp2Zf6VXU+\nyV8ATwDrgL+vqmenNpmkmVn2r/OWtTOf40szN+u7+pIWlOFLDRm+1JDhSw0ZvtSQ4UsNGb7UkOFL\nDRm+1JDhSw0ZvtSQ4UsNGb7UkOFLDRm+1NDM/+feapj1H/mP/eNmacF4xpcaekec8Wd1RvbfBemd\nyjO+1JDhSw0ZvtSQ4UsNGb7UkOFLDRm+1JDhSw0ZvtSQ4UsNGb7UkOFLDRm+1JDhSw0ZvtSQ4UsN\njQ0/yZVJDic5nuTZJPcO6zcneTLJ88P7TbMfV9I0pOrt/89Mkq3A1qr6UZLfAY4BdwKfB16tqr9N\nsgfYVFVfHfO9Fuqf2lwY1v+5p0VSVWN/ZMee8avqbFX9aPj4f4ATwDbgDuCRYbNHGD0YSFoAl/Q/\n95JcBVwPHAG2VNXZ4VPngC1TnewSLNRlhDQHJg4/yXuA7wFfqqpfJv9/NVFV9Zsu45PsBnavdFBJ\n0zP2OT5AkncBB4Enquobw7qTwM1VdXa4D/DDqrp2zPfx5CzN2FSe42d0an8YOHEh+sEBYNfw8S5g\n/3KGlLT6Jrmr/3HgX4H/AN4YVv81o+f53wU+APwM+ExVvTrme3nGl2ZskjP+RJf602L40uxN5VJf\n0juP4UsNGb7UkOFLDRm+1JDhSw0ZvtSQ4UsNGb7UkOFLDRm+1JDhSw0ZvtSQ4UsNGb7UkOFLDRm+\n1JDhSw0ZvtSQ4UsNGb7UkOFLDRm+1JDhSw0ZvtSQ4UsNGb7UkOFLDRm+1JDhSw0ZvtSQ4UsNGb7U\nkOFLDRm+1NDE4SdZl+TpJAeH5R1JjiQ5leSxJBtmN6akabqUM/69wIkly/cDD1TV1cBrwD3THEzS\n7EwUfpLtwB8DDw3LAW4B9g2bPALcOYsBJU3fpGf8bwJfAd4Ylt8HvF5V54fl08C2i31hkt1JjiY5\nuqJJJU3N2PCTfAp4uaqOLWcHVbW3qnZW1c7lfL2k6Vs/wTY3AZ9OcjtwGfC7wIPAxiTrh7P+duDM\n7MaUNE1jz/hVdV9Vba+qq4C7gR9U1eeAw8Bdw2a7gP0zm1LSVK3k9/hfBf4yySlGz/kfns5IkmYt\nVbV6O0tWb2dSU1WVcdv4yj2pIcOXGjJ8qSHDlxoyfKkhw5caMnypIcOXGjJ8qSHDlxoyfKkhw5ca\nMnypIcOXGjJ8qSHDlxoyfKkhw5caMnypIcOXGjJ8qSHDlxoyfKkhw5caMnypIcOXGjJ8qSHDlxoy\nfKkhw5caMnypIcOXGjJ8qSHDlxqaKPwkG5PsS/JckhNJbkyyOcmTSZ4f3m+a9bCSpmPSM/6DwPer\n6kPAR4ATwB7gUFVdAxwaliUtgFTV22+QvBf4MfDBWrJxkpPAzVV1NslW4IdVde2Y7/X2O5O0YlWV\ncdtMcsbfAbwCfDvJ00keSnIFsKWqzg7bnAO2LH9USatpkvDXAx8DvlVV1wO/4i2X9cOVwEXP5kl2\nJzma5OhKh5U0HZOEfxo4XVVHhuV9jB4Ifj5c4jO8f/liX1xVe6tqZ1XtnMbAklZubPhVdQ54KcmF\n5++3AseBA8CuYd0uYP9MJpQ0dWNv7gEk+SjwELAB+CnwBUYPGt8FPgD8DPhMVb065vt4c0+asUlu\n7k0U/rQYvjR707qrL+kdxvClhgxfasjwpYYMX2rI8KWGDF9qyPClhgxfasjwpYYMX2rI8KWGDF9q\nyPClhgxfasjwpYYMX2rI8KWGDF9qyPClhgxfasjwpYYMX2rI8KWGDF9qyPClhgxfasjwpYYMX2rI\n8KWGDF9qyPClhgxfasjwpYYMX2poovCTfDnJs0meSfKdJJcl2ZHkSJJTSR5LsmHWw0qajrHhJ9kG\nfBHYWVUfBtYBdwP3Aw9U1dXAa8A9sxxU0vRMeqm/HvjtJOuBy4GzwC3AvuHzjwB3Tn88SbMwNvyq\nOgN8HXiRUfC/AI4Br1fV+WGz08C2i319kt1JjiY5Op2RJa3UJJf6m4A7gB3A+4ErgNsm3UFV7a2q\nnVW1c9lTSpqqSS71PwG8UFWvVNWvgceBm4CNw6U/wHbgzIxmlDRlk4T/InBDksuTBLgVOA4cBu4a\nttkF7J/NiJKmLVU1fqPka8CfAOeBp4E/Y/Sc/lFg87DuT6vqf8d8n/E7k7QiVZVx20wU/rQYvjR7\nk4TvK/ekhgxfasjwpYYMX2rI8KWGDF9qyPClhgxfasjwpYYMX2rI8KWGDF9qyPClhgxfasjwpYYM\nX2rI8KWGDF9qyPClhgxfasjwpYYMX2rI8KWGDF9qyPClhgxfasjwpYYMX2rI8KWGDF9qyPClhgxf\nasjwpYYMX2rI8KWGDF9qyPClhtav8v7+G/jV8H4R/B6LMyss1ryLNCsszry/P8lGqapZD/LmHSZH\nq2rnqu50mRZpVliseRdpVli8ecfxUl9qyPClhtYi/L1rsM/lWqRZYbHmXaRZYfHmfVur/hxf0trz\nUl9qaNXCT3JbkpNJTiXZs1r7nVSSK5McTnI8ybNJ7h3Wb07yZJLnh/eb1nrWC5KsS/J0koPD8o4k\nR4Zj/FiSDWs94wVJNibZl+S5JCeS3DivxzbJl4efgWeSfCfJZfN8bJdjVcJPsg74O+CPgOuAzya5\nbjX2fQnOA39VVdcBNwB/Psy4BzhUVdcAh4bleXEvcGLJ8v3AA1V1NfAacM+aTHVxDwLfr6oPAR9h\nNPfcHdsk24AvAjur6sPAOuBu5vvYXrqqmvkbcCPwxJLl+4D7VmPfK5h5P/BJ4CSwdVi3FTi51rMN\ns2xnFMstwEEgjF5gsv5ix3yNZ30v8ALDPaUl6+fu2ALbgJeAzYxe4HYQ+MN5PbbLfVutS/0LB/OC\n08O6uZTkKuB64AiwparODp86B2xZo7He6pvAV4A3huX3Aa9X1flheZ6O8Q7gFeDbw1OTh5JcwRwe\n26o6A3wdeBE4C/wCOMb8Httl8ebeWyR5D/A94EtV9culn6vRw/2a/xokyaeAl6vq2FrPMqH1wMeA\nb1XV9Yxetv2my/o5OrabgDsYPVi9H7gCuG1Nh5qB1Qr/DHDlkuXtw7q5kuRdjKL/x6p6fFj98yRb\nh89vBV5eq/mWuAn4dJL/Ah5ldLn/ILAxyYW/v5inY3waOF1VR4blfYweCObx2H4CeKGqXqmqXwOP\nMzre83psl2W1wn8KuGa4M7qB0c2SA6u074kkCfAwcKKqvrHkUweAXcPHuxg9919TVXVfVW2vqqsY\nHcsfVNXngMPAXcNmczErQFWdA15Kcu2w6lbgOHN4bBld4t+Q5PLhZ+LCrHN5bJdtFW+a3A78BPhP\n4G/W+ubGReb7OKNLzX8Hfjy83c7oufMh4HngX4DNaz3rW+a+GTg4fPxB4N+AU8A/Ae9e6/mWzPlR\n4OhwfP8Z2DSvxxb4GvAc8AzwD8C75/nYLufNV+5JDXlzT2rI8KWGDF9qyPClhgxfasjwpYYMX2rI\n8KWG/g/9WckE6/8VfQAAAABJRU5ErkJggg==\n",
+      "text/plain": [
+       "<Figure size 600x400 with 1 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
