--- a/daily/8/mxnet_tutorial/data.ipynb
+++ b/daily/8/mxnet_tutorial/data.ipynb
@@ -1059,10 +1059,199 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "####  练习"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "<!-- INSERT SOURCE DOWNLOAD BUTTONS -->\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "header0 label [367889. 376166.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "path_imgidx, path_imgrec='/home/zhangxk/AIProject/数据集与模型/arcface_dataset/faces_umd/train.idx','/home/zhangxk/AIProject/数据集与模型/arcface_dataset/faces_umd/train.rec'\n",
+    "reader=mx.recordio.MXIndexedRecordIO(path_imgidx, path_imgrec, 'r')\n",
+    "s=reader.read_idx(0)\n",
+    "header, _ = mx.recordio.unpack(s)\n",
+    "print('header0 label', header.label)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#类别的索引\n",
+    "header0 = (int(header.label[0]), int(header.label[1]))\n",
+    "seq_identity = range(int(header.label[0]), int(header.label[1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#类别\n",
+    "cls=seq_identity[0]\n",
+    "s=reader.read_idx(cls)\n",
+    "_hearer,_=mx.recordio.unpack(s)\n",
+    "a,b = int(_hearer.label[0]), int(_hearer.label[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "25"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "HEADER(flag=2, label=array([ 1., 25.], dtype=float32), id=367889, id2=0)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "_hearer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "a=range(3,5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "b=[]\n",
+    "b+=range(99,102)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "b+=range(11,22)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[99, 100, 101, 99, 100, 101, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21]"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
