--- a/daily/8/mxnet_tutorial/data.ipynb
+++ b/daily/8/mxnet_tutorial/data.ipynb
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
@@ -121,6 +121,40 @@
     "#     print([batch.data, batch.label, batch.pad])\n",
     "    print(batch.data[0].shape)\n",
     "    break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(20, 3)\n",
+      "(20, 3)\n",
+      "(20, 3)\n",
+      "(20, 3)\n",
+      "(20, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''\n",
+    "练习：\n",
+    "数据可以以 数组，dict,或者直接numpy 提供给NDArrayIter\n",
+    "'''\n",
+    "d1=np.random.gamma(1,size=(100,3))\n",
+    "d2=np.random.gamma(1,size=(100,2))\n",
+    "bs=20\n",
+    "# loader=mx.io.NDArrayIter(data=[d1,d2],batch_size=bs)\n",
+    "loader=mx.io.NDArrayIter(data={'d1':d1,'d2':d2},batch_size=bs)\n",
+    "for x in loader:\n",
+    "    print(x.data[0].shape)\n",
+    "# loader.provide_data"
    ]
   },
   {
@@ -162,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -213,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
@@ -224,7 +258,7 @@
        "[('image', (32, 32, 3)), ('bbox', 4)]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
     "collapsed": true
    },
@@ -290,11 +324,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['data', 'fc1_weight', 'fc1_bias', 'fc2_weight', 'fc2_bias', 'softmax_label']\n",
+      "['softmax_output']\n"
+     ]
+    }
+   ],
    "source": [
     "import mxnet as mx\n",
     "num_classes = 10\n",
@@ -326,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "collapsed": true
    },
@@ -343,6 +386,113 @@
     "\n",
     "mod = mx.mod.Module(symbol=net)\n",
     "mod.fit(data_iter, num_epoch=5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 练习，自己设计一个自定义 的数据集"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# 比如 我做人脸识别，某个目录下面文件夹 是人脸id,文件夹下面是具体的图片，\n",
+    "# 要求图片 是 120,120, \n",
+    "# 返回 data=图片(3,h,w)\n",
+    "# label=landmark(10),bbox(4),classlabel=()\n",
+    "import os\n",
+    "from pathlib import Path\n",
+    "class MyFaceIter(mx.io.DataIter):\n",
+    "    def __init__(self,batch_size,path=None,imgsize=112):\n",
+    "        self.imgpath=[]\n",
+    "        self.imglabel=[]\n",
+    "        self.batch_size=batch_size\n",
+    "        self.imgsize=imgsize\n",
+    "        path='/home/zhangxk/AIProject/数据集与模型/arcface_dataset/faces_umd/db'\n",
+    "        for id in os.listdir(path):\n",
+    "            labelpath=os.path.join(path,id)\n",
+    "            for imgfile in os.listdir(labelpath):\n",
+    "                _f=os.path.join(labelpath,imgfile)\n",
+    "                self.imgpath.append(_f)\n",
+    "                self.imglabel.append(id)\n",
+    "        self._datainfo=[('image',(batch_size,3,imgsize,imgsize),'float')]\n",
+    "        self._labelinfo=[('label',(batch_size,),'float'),\n",
+    "                         ('bbox',(batch_size,4),'float'),\n",
+    "                         ('landmark',(batch_size,10),'float'),\n",
+    "                        ]\n",
+    "        self.cur=0\n",
+    "    def __next__(self):\n",
+    "        if self.cur>=len(self.imglabel):\n",
+    "            raise StopIteration\n",
+    "        rg=range(self.cur,min(self.cur+self.batch_size,len(self.imglabel)))\n",
+    "        \n",
+    "        data={}\n",
+    "        imgs=[]\n",
+    "        bbox=[]\n",
+    "        landmark=[]\n",
+    "        \n",
+    "        label=[]\n",
+    "        for ii in rg:\n",
+    "            img=np.random.randn(3,self.imgsize,self.imgsize)\n",
+    "            box=np.random.randn(4)\n",
+    "            land=np.random.randn(10)\n",
+    "            \n",
+    "            imgs.append(img)\n",
+    "            label.append(str(self.imglabel[ii]))\n",
+    "            bbox.append(box)\n",
+    "            landmark.append(land)\n",
+    "            \n",
+    "        imgs=mx.nd.array(imgs)\n",
+    "        bbox=mx.nd.array(bbox)\n",
+    "        landmark=mx.nd.array(landmark)\n",
+    "        label=mx.nd.array(label)\n",
+    "        \n",
+    "        \n",
+    "        labels=[label,bbox,landmark]\n",
+    "        self.cur+=self.batch_size\n",
+    "        return mx.io.DataBatch(data=[imgs],label=labels)\n",
+    "        \n",
+    "    @property\n",
+    "    def provide_data(self):\n",
+    "        return self._datainfo\n",
+    "    @property\n",
+    "    def provide_label(self):\n",
+    "        return self._labelinfo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-95-d81c60df95b7>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;31m# db.provide_label\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mdb\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlabel\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m     \u001b[1;32mbreak\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "p='/home/zhangxk/AIProject/数据集与模型/arcface_dataset/faces_umd/db'\n",
+    "db=MyFaceIter(5,p,112)\n",
+    "# db.provide_label\n",
+    "for x in db:\n",
+    "    print(x.label[2].shape)\n",
+    "    break"
    ]
   },
   {
