--- a/daily/8/DeepLearning/myproject/cluster/learn_sparse_matrix.ipynb
+++ b/daily/8/DeepLearning/myproject/cluster/learn_sparse_matrix.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -83,6 +83,140 @@
     "print('dense:',B)\n",
     "print(type(S))\n",
     "# print(isinstance(S,scipy.sparse.csr.csr_matrix))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 0 0 1]\n",
+      " [0 0 2 0]\n",
+      " [0 3 0 0]\n",
+      " [4 0 0 0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#指定索引后创建一个\n",
+    "a=csr_matrix(([1,2,3,4],([0,1,2,3],[3,2,1,0])),shape=(4,4))\n",
+    "print(a.toarray())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 2 3]\n",
+      "[3 2 1 0]\n",
+      "[1 2 3 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "b=a.tocoo()\n",
+    "print(b.row)\n",
+    "print(b.col)\n",
+    "print(b.data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0, 1, 2, 3],\n",
+      "        [3, 2, 1, 0]])\n",
+      "tensor([1, 2, 3, 4])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor(indices=tensor([[0, 1, 2, 3],\n",
+       "                       [3, 2, 1, 0]]),\n",
+       "       values=tensor([1, 2, 3, 4]),\n",
+       "       size=(4, 4), nnz=4, layout=torch.sparse_coo)"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "ii=np.stack((b.row,b.col),axis=0)\n",
+    "ii=torch.from_numpy(ii).long()\n",
+    "print(ii)\n",
+    "d=torch.from_numpy(b.data)\n",
+    "print(d)\n",
+    "torch.sparse.FloatTensor(indices=ii,values=d,device='cpu')\n",
+    "# torch.sparse.FloatTensor(indices=torch.Tensor([[0,1]]),values=torch.Tensor([1]),device='cpu')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([4, 4])"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.Size(b.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0, 1, 1, 2],\n",
+       "        [3, 1, 2, 1]], dtype=torch.int32)"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.from_numpy(ii)"
    ]
   },
   {
