--- a/daily/8/ccpd/prepareData.ipynb
+++ b/daily/8/ccpd/prepareData.ipynb
@@ -465,8 +465,7 @@
     "opmimizer=get_optimizer(model)\n",
     "for i in range(epoch):\n",
     "    train_epoch(model,compute_loss,trainset,optimizer,device=device)\n",
-    "    saveModel(model,optimizer,os.path.join(model_path,'E%d.pt'%i))\n",
-    "    \n"
+    "    saveModel(model,optimizer,os.path.join(model_path,'E%d.pt'%i))"
    ]
   }
  ],
@@ -479,7 +478,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 3.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
@@ -490,5 +489,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 0
 }
