--- a/cs224w/hw0-bundle/hw0.ipynb
+++ b/cs224w/hw0-bundle/hw0.ipynb
@@ -41,15 +41,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "nodes: 7115\n",
-      "self_loops: 0\n",
-      "direct_edge: 103689\n",
-      "undirect_edge: 100762\n"
+      "nodes: 3\n",
+      "self_loops: 1\n",
+      "direct_edge: 4\n",
+      "undirect_edge: 2\n"
      ]
     }
    ],
    "source": [
-    "Gsmall=snap.TNGraph().New()\n",
+    "Gsmall=snap.TUNGraph().New()\n",
     "Gsmall.AddNode(1)\n",
     "Gsmall.AddNode(2)\n",
     "Gsmall.AddNode(3)\n",
@@ -57,11 +57,36 @@
     "Gsmall.AddEdge(2,1)\n",
     "Gsmall.AddEdge(1,3)\n",
     "Gsmall.AddEdge(1,1)\n",
-    "Gsmall=snap.LoadEdgeList(snap.PNGraph,'data/Wiki-Vote.txt',0,1)\n",
+    "# Gsmall=snap.LoadEdgeList(snap.PNGraph,'data/Wiki-Vote.txt',0,1)\n",
     "print('nodes:',Gsmall.GetNodes())\n",
     "print('self_loops:',snap.CntSelfEdges(Gsmall))\n",
     "print('direct_edge:',snap.CntUniqDirEdges(Gsmall))\n",
     "print('undirect_edge:',snap.CntUniqUndirEdges(Gsmall))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "n=Gsmall.GetNI(1)\n",
+    "outdegreee=n.GetDeg()\n",
+    "for i in range(outdegreee):\n",
+    "    idd=n.GetNbrNId(i)\n",
+    "    print(idd)"
    ]
   },
   {
@@ -75,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -84,9 +109,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "reciprocated 2927\n",
-      "1005  nodes have out degree 0\n",
-      "4734  nodes have int degree 0\n"
+      "reciprocated 2\n",
+      "0  nodes have out degree 0\n",
+      "0  nodes have int degree 0\n"
      ]
     }
    ],
