--- a/cs224w/hw0-bundle/hw0.ipynb
+++ b/cs224w/hw0-bundle/hw0.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -42,23 +42,27 @@
      "output_type": "stream",
      "text": [
       "nodes: 3\n",
+      "edges: 4\n",
       "self_loops: 1\n",
-      "direct_edge: 4\n",
+      "direct_edge: 3\n",
       "undirect_edge: 2\n"
      ]
     }
    ],
    "source": [
     "Gsmall=snap.TUNGraph().New()\n",
+    "# Gsmall=snap.TNEANet().New()\n",
     "Gsmall.AddNode(1)\n",
     "Gsmall.AddNode(2)\n",
     "Gsmall.AddNode(3)\n",
     "Gsmall.AddEdge(1,2)\n",
     "Gsmall.AddEdge(2,1)\n",
     "Gsmall.AddEdge(1,3)\n",
+    "Gsmall.AddEdge(1,3)\n",
     "Gsmall.AddEdge(1,1)\n",
     "# Gsmall=snap.LoadEdgeList(snap.PNGraph,'data/Wiki-Vote.txt',0,1)\n",
     "print('nodes:',Gsmall.GetNodes())\n",
+    "print('edges:',Gsmall.GetEdges())\n",
     "print('self_loops:',snap.CntSelfEdges(Gsmall))\n",
     "print('direct_edge:',snap.CntUniqDirEdges(Gsmall))\n",
     "print('undirect_edge:',snap.CntUniqUndirEdges(Gsmall))"
